--- a/ReactStrap/freelancing-scape/src/css/style.css
+++ b/ReactStrap/freelancing-scape/src/css/style.css
@@ -1,3 +1,11 @@
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
 html{
     width: 100%;
     overflow-x: hidden;
